--- a/main.css
+++ b/main.css
@@ -27,10 +27,13 @@ header {
     width: 15rem;
     height: 1.5rem;
     justify-content: flex-end;
-    border: 1px solid #CCFFBD;
+    border: none;
     border-radius: 3px;
-    color: #CCFFBD;
-    background-color: #40394A;
+    color: #FAF4F4;
+    background-color: #70687c;
+}
+.buscador-header::placeholder {
+    color: #FAF4F4;
 }
 .logo-header,
 .buscador-header,
@@ -40,6 +43,28 @@ header {
 .logo-header {
     display: flex;
     justify-content: end;
+}
+
+/*                       MENÚ                       */
+.dropdown-menu {
+    background-color: #40394A;
+    color: #FAF4F4;
+}
+#dropdownMenuButton1 {
+    background-color: #40394A;
+    color: #70687c;
+    font-size: 1.2rem;
+    border: none;
+}
+#dropdownMenuButton1:hover {
+    color: #FAF4F4;
+}
+.dropdown-item {
+    color: #FAF4F4;
+}
+.dropdown-item:hover {
+    background-color: #70687c;
+    color: #FAF4F4;
 }
 
 
@@ -74,7 +99,7 @@ header {
     border-radius: 5px;
     overflow: hidden;
     background-color: #40394A;
-    margin: 1rem;
+    margin: auto;
 }
 .film img {
     width: 100%;;
@@ -138,6 +163,10 @@ header {
     flex-direction: column;
     justify-content: center;
     align-items: center;
+    margin: auto;
+}
+.container-top-reseñas .film {
+    margin-top: 1rem;
 }
 
 
@@ -168,41 +197,52 @@ header {
     align-items: center;
 }
 
+.footer-div a:hover {
+    text-decoration: none;
+    color: #FAF4F4;
+}
 
 
 
 
 @media (max-width: 950px) {
-    /*            HEADER Y NAV RESPONSIVE      */
-    .div-header {
-        grid-template-columns: 1fr 1fr;
-    }
-    .buscador-header {
-        display: none;
-    }
-    .menu {
-        display: flex;
-        justify-content: space-between;
-        align-items: center;
-    }
+/*            HEADER Y NAV RESPONSIVE      */
+.div-header {
+    grid-template-columns: 1fr 1fr;
+}
 
+.buscador-header {
+    display: none;
+}
 
+.menu {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+}
+
+/*                       MENÚ                       */
+#dropdownMenuButton1 {
+    color: #FAF4F4;
+}
 
 /*           ULTIMA PELICULA VISTA     */
-
 .ultima-peli {
     margin: auto;
     max-width: 650px;
     max-height: 350px;
     overflow: hidden;
     position: relative;
-    }
+}
+
 .ultima-peli:hover img {
     display: none;
 }
+
 .point {
     display: none;
 }
+
 .point-responsive {
     margin: 0;
     display: flex;
@@ -220,40 +260,37 @@ header {
 .container-card {
     max-width: 1000px;
     margin: auto;
-    padding: 2rem;
-    display: flex;
-    flex-direction: column;
+    display: grid;
+    grid-template-columns: 1fr;
     justify-content: center;
     align-items: center;
+    max-height: 1200px;
+    overflow: hidden;
 }
 
+/*            FOOTER RESPONSIVE              */
 
+.footer-div {
+    max-width: 1000px;
+    height: 7rem;
+    margin: auto;
+    display: flex;
+    flex-direction: column;
+    font-weight: 800;
+}
+.footer-contact {
+    display: grid;
+    grid-template-columns: 1fr;
+    display: flex;
+    flex-direction: column;
+    padding: 0;
+    margin: 0.5rem;
+}
+.footer-contact a {
+    margin: 0.2rem;
+}
+.footer-contact p {
+    margin: 0.2rem;
+}
 
-
-
-
-
-
-
-
-
-    /*            FOOTER RESPONSIVE              */
-
-    .footer-div {
-        max-width: 1000px;
-        height: 7rem;
-        margin: auto;
-        display: flex;
-        flex-direction: column;
-        font-weight: 800;
-    }
-    .footer-contact {
-        display: grid;
-        grid-template-columns: 1fr;
-        display: flex;
-        flex-direction: column;
-    }
-    .footer-contact a {
-        margin: 0.2rem;
-    }
 }
