--- a/main.css
+++ b/main.css
@@ -108,11 +108,8 @@ header {
 .film:hover img {
     width: 100%;;
     height: 310px;
-    border-radius: 5px;
-    -webkit-transform:scale(1.1);
-    transform:scaleX(1.1);
-    transition: 0.7s;
     cursor: pointer;
+    filter: saturate(180%);
 }
 .film h3 {
     color: #FAF4F4;
@@ -195,6 +192,7 @@ header {
     display: flex;
     justify-content: space-around;
     align-items: center;
+    padding: 0;
 }
 
 .footer-div a:hover {
@@ -225,36 +223,6 @@ header {
 #dropdownMenuButton1 {
     color: #FAF4F4;
 }
-
-/*           ULTIMA PELICULA VISTA     */
-.ultima-peli {
-    margin: auto;
-    max-width: 650px;
-    max-height: 350px;
-    overflow: hidden;
-    position: relative;
-}
-
-.ultima-peli:hover img {
-    display: none;
-}
-
-.point {
-    display: none;
-}
-
-.point-responsive {
-    margin: 0;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    font-size: 1.5rem;
-    color: #FAF4F4;
-}
-
-
-
-
 
 /*                   CARDS PELICULAS                                */     
 .container-card {
