--- a/series.css
+++ b/series.css
@@ -14,9 +14,7 @@
 .serie:hover img {
     width: 100%;;
     height: 310px;
-    border-radius: 5px;
-    -webkit-transform:scale(1.1);
-    transform:scaleX(1.1);
+    filter: saturate(180%);
     transition: 0.7s;
     cursor: pointer;
 }
@@ -29,4 +27,13 @@
     align-items: center;
     letter-spacing: 1px;
     font-size: 1.3rem;
+}
+
+
+@media (max-width: 950px) {s
+/*                   CARDS SERIES                                */     
+.container-card {
+    max-height: none;
+}
+
 }
